--- a/DivaWorkshop/SlidesDivaLecce2016/DivaLecce2016_general.tex
+++ b/DivaWorkshop/SlidesDivaLecce2016/DivaLecce2016_general.tex
@@ -103,25 +103,25 @@
 \begin{description}
 
 \item[Program:] user-driven 
-\item[Working hours:] from 9:00 to 24:00
+\item[Working hours:] from 9:00 to 17:00
 \item[]
 \item[Meals:]\begin{itemize}
-\item Breakfast: 8:00-9:30
-\item Lunch: 12:30
-\item Dinner: 19:30
+\item Breakfast: ?
+\item Lunch: 12:00 to 14:00
+\item Dinner: ?
 \end{itemize}
-Listen to the bell!
-\item[Drinks:] write your name/consumptions on the blackboard
+%Listen to the bell!
+\item[Drinks:] ? %write your name/consumptions on the blackboard
 \item[]
-\item[Internet:] wireless in the station,\\
-not in the lighthouse
+\item[Internet:] ? %wireless in the station,\\
+%not in the lighthouse
 \end{description}
 
 \column{.45\textwidth}
 {
 \begin{figure}
 \centering
-\includegraphics[width=.7\textwidth]{calvi_lighhouse}
+\includegraphics[width=.7\textwidth]{president-lecce}
 \end{figure}
 }
 \end{columns}
@@ -133,107 +133,96 @@ not in the lighthouse
 \frametitle{Program}
 \footnotesize
 
-\onslide*<1-5>{\vspace{2cm}}
+\onslide*<1-4>{\vspace{2cm}}
 
 \onslide*<1>{
-\important{Friday 9}
+\important{Monday 11}
 \begin{itemize}
 \scriptsize
-\item[\CheckedBox] Installation and compilation of the latest stable version of the code. 
-\item[\CheckedBox] Basic test of the installation for 2D
-\item[\CheckedBox] Registration to the \diva user group. \url{https://groups.google.com/forum/\#!forum/diva_users}
+\item[\CheckedBox] Presentation of \diva software (formulation, advantages, implementation)
+\item[\CheckedBox] Tests with a common data set in 2D (influence of analysis parameters and error field calculation)
+\item[\CheckedBox] Extraction of topography and creation of contours from topography
+\item[\CheckedBox] Presentation of \diva-on-web and OceanBrowser
+\item[\CheckedBox] Registration to the \diva user group \url{https://groups.google.com/forum/\#!forum/diva_users}
 \end{itemize}
 }
 \onslide*<2>{
-\important{Saturday 10}
+\important{Tuesday 12}
 \begin{itemize}
 \scriptsize
-\item[\CheckedBox] General presentation of the workshop: historic, participants, organization.
-\item[\CheckedBox] Presentation of \diva software.
-\item[\CheckedBox] Tests with a common data set in 2D (influence of analysis parameters and error field calculation).
-\item[\CheckedBox] Extraction of topography and creation of contours from topography.
-\item[\CheckedBox] Test with user's data set (2D). 
+\item[\CheckedBox] Presentation of GODIVA (Diva with loops on time and depth levels)
+\item[\CheckedBox] Test case with a common data set: role of the parameters in the driver file
+\item[\CheckedBox] Extraction of data from ODV spreadsheets
+\item[\CheckedBox] Application with provided data set
 \end{itemize}
 }
 \onslide*<3>{
-\important{Monday 12}
+\important{Wednesday 13}
 \begin{itemize}
 \scriptsize
-\item[\CheckedBox] Presentation of GODIVA.
-\item[\CheckedBox] Test case with a common data set.
-\item[\CheckedBox] Extraction of data from ODV spreadsheets.
-\item[\CheckedBox] Extraction of topography and creation of contours.
-\item[\CheckedBox] Application with user data. 
+\item[\CheckedBox] Presentation: recent developments and future improvements of Diva
+\item[\CheckedBox] Methods to derive error fields
+\item[\CheckedBox] Application with provided data set (continued)
+\item[\CheckedBox] Advanced analysis (for expert users): advection, data transformation, correlated observational errors
 \end{itemize}
 }
 \onslide*<4>{
-\important{Tuesday 13}
+\important{Thursday 14}
 \begin{itemize}
 \scriptsize
-\item[\CheckedBox] Presentation: recent developments and future improvements.
-\item[\CheckedBox] Application with user data.
-\item[\CheckedBox] Advanced analysis (for expert users).
-\item[\CheckedBox] Presentation of the participants results. 
+\item[\CheckedBox] Extension of DIVA to higher dimensions
+\item[\CheckedBox] Analytical solutions and well-posed character of the problem
+\item[\CheckedBox] Advection constraint with time dimension
+\item[\CheckedBox] Multivariate extension
+\item[\CheckedBox] Presentation of the participants results (?)
+\item[\CheckedBox] User specific questions + feedback.
 \end{itemize}
 }
 \onslide*<5>{
-\important{Wednesday 14}
-\begin{itemize}
-\scriptsize
-\item[\CheckedBox] User specific questions + feedback.
-\item[\CheckedBox] Departure of participants. 
-\end{itemize}
-}
-
-\onslide*<6>{
 \begin{columns}[totalwidth=\textwidth]
 \column{.525\textwidth}
-\important{Friday 9}
 
+\important{Monday 11}
 \begin{itemize}
 \scriptsize
-\item[\CheckedBox] Installation and compilation of the latest stable version of the code. 
-\item[\CheckedBox] Basic test of the installation for 2D
-\item[\CheckedBox] Registration to the \diva user group.  
+\item[\CheckedBox] Presentation of \diva software (formulation, advantages, implementation)
+\item[\CheckedBox] Tests with a common data set in 2D (influence of analysis parameters and error field calculation)
+\item[\CheckedBox] Extraction of topography and creation of contours from topography
+\item[\CheckedBox] Presentation of \diva-on-web and OceanBrowser
+\item[\CheckedBox] Registration to the \diva user group \url{https://groups.google.com/forum/\#!forum/diva_users}
 \end{itemize}
 
-\important{Saturday 10}
+\important{Tuesday 12}
 \begin{itemize}
 \scriptsize
-\item[\CheckedBox] General presentation of the workshop: historic, participants, organization.
-\item[\CheckedBox] Presentation of \diva software.
-\item[\CheckedBox] Tests with a common data set in 2D (influence of analysis parameters and error field calculation).
-\item[\CheckedBox] Extraction of topography and creation of contours from topography.
-\item[\CheckedBox] Test with user's data set (2D). 
+\item[\CheckedBox] Presentation of GODIVA (Diva with loops on time and depth levels)
+\item[\CheckedBox] Test case with a common data set: role of the parameters in the driver file
+\item[\CheckedBox] Extraction of data from ODV spreadsheets
+\item[\CheckedBox] Application with provided data set
 \end{itemize}
 
 \column{.525\textwidth}
 
-\important{Monday 12}
+\important{Wednesday 13}
 \begin{itemize}
 \scriptsize
-\item[\CheckedBox] Presentation of GODIVA.
-\item[\CheckedBox] Test case with a common data set.
-\item[\CheckedBox] Extraction of data from ODV spreadsheets.
-\item[\CheckedBox] Extraction of topography and creation of contours.
-\item[\CheckedBox] Application with user data. 
+\item[\CheckedBox] Presentation: recent developments and future improvements of Diva
+\item[\CheckedBox] Methods to derive error fields
+\item[\CheckedBox] Application with provided data set (continued)
+\item[\CheckedBox] Advanced analysis (for expert users): advection, data transformation, correlated observational errors
 \end{itemize}
 
-\important{Tuesday 13}
+\important{Thursday 14}
 \begin{itemize}
 \scriptsize
-\item[\CheckedBox] Presentation: recent developments and future improvements.
-\item[\CheckedBox] Application with user data.
-\item[\CheckedBox] Advanced analysis (for expert users).
-\item[\CheckedBox] Presentation of the participants results. 
-\end{itemize}
-
-\important{Wednesday 14}
-\begin{itemize}
-\scriptsize
+\item[\CheckedBox] Extension of DIVA to higher dimensions
+\item[\CheckedBox] Analytical solutions and well-posed character of the problem
+\item[\CheckedBox] Advection constraint with time dimension
+\item[\CheckedBox] Multivariate extension
+\item[\CheckedBox] Presentation of the participants results (?)
 \item[\CheckedBox] User specific questions + feedback.
-\item[\CheckedBox] Departure of participants. 
 \end{itemize}
+
 \end{columns}
 }
 \end{frame}
@@ -260,7 +249,7 @@ not in the lighthouse
 \begin{tabular}{lrclr}
 \includegraphics[width=.15\textwidth]{alex.jpg} & Alexander &&\includegraphics[width=.15\textwidth]{mohamed2.jpg} & Mohamed \\
 \includegraphics[width=.15\textwidth]{jmb.jpg} & Jean-Marie && \includegraphics[width=.15\textwidth]{sylvain3.jpg} & Sylvain \\
-\includegraphics[width=.15\textwidth]{ctroupin.jpg} & Charles && \includegraphics[width=.15\textwidth]{Cant01.jpg} & Martin 
+\includegraphics[width=.15\textwidth]{ctroupin.jpg} & Charles && \includegraphics[width=.15\textwidth]{gaelle.jpg} & Gaëlle 
 
 
 \end{tabular}
