--- a/DivaWorkshop/SlidesDivaLecce2016/DivaLecce2016_general.tex
+++ b/DivaWorkshop/SlidesDivaLecce2016/DivaLecce2016_general.tex
@@ -103,17 +103,14 @@
 \begin{description}
 
 \item[Program:] user-driven 
-\item[Working hours:] from 9:00 to 17:00
-\item[]
-\item[Meals:]\begin{itemize}
-\item Breakfast: ?
-\item Lunch: 12:00 to 14:00
-\item Dinner: ?
-\end{itemize}
+\item[Morning lectures:] from 9:00 to 18:00
+\item[Lunch:] 13:00 to 14:30
+\item[Afternoon exercises:] from 14:30 to 18:00
+
 %Listen to the bell!
-\item[Drinks:] ? %write your name/consumptions on the blackboard
-\item[]
-\item[Internet:] ? %wireless in the station,\\
+%\item[Drinks:] ? %write your name/consumptions on the blackboard
+%\item[]
+%\item[Internet:] ? %wireless in the station,\\
 %not in the lighthouse
 \end{description}
 
