--- a/DivaWorkshop/SlidesDivaLecce2016/GHERheader2015.tex
+++ b/DivaWorkshop/SlidesDivaLecce2016/GHERheader2015.tex
@@ -124,6 +124,8 @@ pdffitwindow=true
 \newcommand{\myshadowbox}[1]{\shabox{\parbox{10cm}{#1}}}
 \newcommand{\inv}[1]{{#1}^{ \mbox{\small{-}}  1}}
 
+\newcommand{\vect}[1] { \mbox{\boldmath   $ #1 $} }
+
 \lstdefinestyle{Bash}
 {language=bash,
 keywordstyle=\color{blue},
