--- a/DivaWorkshop/SlidesDivaLecce2016/GHERheader2015.tex
+++ b/DivaWorkshop/SlidesDivaLecce2016/GHERheader2015.tex
@@ -1,4 +1,4 @@
-\documentclass[finals,table,dvipsnames]{beamer}
+\documentclass[finals,table,dvipsnames,11pt]{beamer}
 \usefonttheme{professionalfonts}
 
 \usepackage[english]{babel}
